[tool.poetry]
name = "fastapi-cloud-drives"
version = "0.1.4"
description = "Module for FastAPI to work with cloud drives"
authors = ["Hasan Aliyev <hasan.aliyev.555@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MadeByMads/fastapi-cloud-drives"
repository = "https://github.com/MadeByMads/fastapi-cloud-drives"
keywords = [
    "FastAPI",
    "Google Drive",
    "OneDrive",
    "Dropbox",
    "Amazon S3"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
uvicorn = "^0.13.3"
google-api-python-client = "^1.12.8"
oauth2client = "^4.1.3"
google-auth-oauthlib = "^0.4.2"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
dropbox = "^11.2.0"
boto3 = "^1.17.11"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MadeByMads/fastapi-cloud-drives/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
